--- a/index.html
+++ b/index.html
@@ -2,43 +2,40 @@
 <html>
       <head>
           <title>WONDERFUL INDONESIA</title>
+          <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet"> 
           <link href="css/header.css" rel="stylesheet" type="text/CSS">
           <link href="css/main.css" rel="stylesheet" type="text/CSS">
           <link href="css/footer.css" rel="stylesheet" type="text/CSS">
       </head>
       <body>
         <!--INI BAGIAN HEADER DARI WEBSITE-->
-        <div id="header"><img src="" class="logo" >
+        <div id="header">
+          <div class="jumbotron">
+            <div class="overlay"></div>
+        <br>
+             <h1>Welcome To Kabur Air Blog</h1>
+             <p>this is wuna island, the island that has a unique and beautiful tour is located in indonesia, southeast sulawesi, muna district</p>
         </div>
-
-        <!--INI BAGIAN MAIN DARI WEBSITE-->
+        <!--INI BAGIAN MAIN DARI WEBSITE -->
         <div id="main">
-          <h1>
-            <center>
-               <span id="h1main">
-            Hi. I am Falend from Muna island, which is precisely Raha, Southeast Sulawesi, an island that has beautiful 
-          and unique destinations, well, it is suitable if you want to have a vacation, not only beaches and beautiful 
-          hills, you can also find many historical places , well the island next to the island of Buton is no less 
-          beautiful than the destination Raja Ampat island.
-          <center>
-              <a href="https://www.google.com/maps/place/Kabupaten+Muna,+Sulawesi+Tenggara/@-5.1277916,121.3698387,9z/data=!4m5!3m4!1s0x2da24a926bb533a3:0x3030bfbcaf771d0!8m2!3d-4.901629!4d122.6277455">
-              <marquee></marquee>
-                <button name="nice">Mai Te Wuna </button>
-              </center>       
-        </span>
-            </center>
-        </h1>
+          <br>
+          <br>
+          <br>
+                <form>
+                   username:<br>
+                   <input type="text" name="username" required><br>
+                   password:<br>
+                   <input type="text" name="password" required><br>
+                   <br>
+                   <input type="submit" value="login">
+                   
+                </form>
         </div>
-        <div> 
-
-        </div>
-        
         <!--INI BAGIAN FOOTER DARI WEBSITE-->
         <div id="footer">
-
-          <p>copyright 2019 My Page</p>
-
+           <h2>
+             2019.@falendmuzafaat
+           </h2>
         </div>
       </body>
-      <!--testing github-->
 </html>
