nav bottom, atas bawah

--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
       </head>
       <body>
         <!--INI BAGIAN HEADER DARI WEBSITE-->
-        <div id="header">
+        <div class="topnav">
+            <a class="active" href="https://munabangkit.com/maitewuna/" target="_blank">Home</a>
+            <a href="https://sultrakini.com/topik/maitewuna" target="_blank">News</a>
+            <a href="https://www.google.com/maps/place/Kabupaten+Muna,+Sulawesi+Tenggara/@-5.1277916,121.3698387,9z/data=!4m5!3m4!1s0x2da24a926bb533a3:0x3030bfbcaf771d0!8m2!3d-4.901629!4d122.6277455" target="_blank">Location</a>
+            <a href="https://wisato.id/wisata-alam/10-tempat-wisata-di-muna-yang-mempesona/" target="_blank">About</a>
+          </div>
+          <div id="header">
           <div class="jumbotron">
             <div class="overlay"></div>
-        <br>
+             <br>
              <h1>Welcome To Kabur Air Blog</h1>
              <p>this is wuna island, the island that has a unique and beautiful tour is located in indonesia, southeast sulawesi, muna district</p>
         </div>
@@ -33,9 +39,12 @@
         </div>
         <!--INI BAGIAN FOOTER DARI WEBSITE-->
         <div id="footer">
-           <h2>
-             2019.@falendmuzafaat
-           </h2>
-        </div>
+          <h2>2019.FalendMuzafaat.Jompy</h2>
+          <div class="navbar">
+            <a href="http://WWW.instagram.com/falendmuzafaat" target="_blank">Instagram</a>
+            <a href="http://WWW.instagram.com/falendmuzafaat" target="_blank">News</a>
+            <a href="">Contact : 081354437797</a>
+
+    </div>
       </body>
 </html>
